Refactor: Consolidate Dagger components and remove app-di module
This commit streamlines the Dagger dependency injection setup by removing the `app-di` module and its `AppComponent`. The functionality of `AppComponent` has been merged into `CoreComponent` located in the `core-infra` module.

Key changes:
- Deleted the `app-di` module.
- `CoreComponent` in `core-infra` now handles injection for all necessary classes, including those previously handled by `AppComponent`.
- Updated `LumiBuddyApplication` to initialize and use the consolidated `CoreComponent`.
- Removed `app-di` dependency from all feature modules (`feature-diary`, `feature-growschedule`, `feature-measurement`, `feature-plantdb`) and the main `app` module.
- Moved `PlantInfoRepository` from `core-data` to `core-infra.plantdb` package.
- Updated `README.md` to reflect the simplified DI setup.

Additionally:
- Added `colors.xml` to `feature-growschedule` with color definitions for lux, PPFD, and DLI.
- Added a missing import for `javax.inject.Inject` in `MeasureViewModel.java`.
- Added an import for `assertEquals` in `ARMLIntegrationTest.java`.